added spinner and showed receipt from ajax

--- a/views/partials/modals/3dModal.ejs
+++ b/views/partials/modals/3dModal.ejs
@@ -10,7 +10,7 @@
                 </button>
             </div>
             <div class="modal-body justify-content-center">
-                <model-viewer src="/images/Scaniverse2022-08-20152832.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls
+                <model-viewer poster="/images/Spinner-1s-554px.gif" src="/images/Scaniverse2022-08-20152832.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls
                     poster="poster.webp" shadow-intensity="1">
                     <div class="progress-bar hide" slot="progress-bar">
                         <div class="update-bar"></div>
