--- a/views/room-information.ejs
+++ b/views/room-information.ejs
@@ -30,7 +30,7 @@
                                         platform to empower local artists and creatives - we recognize who we are, know that we have a voice and we use it
                                         to
                                         build the creative good in all people.</div>
-                                        <div class="form-group probootstrap-cta-button-wrap" style="padding-top: 15px;"><a href="/reservation" class="btn btn-primary">Reserve Now</a>
+                                        <div class="form-group probootstrap-cta-button-wrap" style="padding-top: 15px;"><a href="/reservation?room-id=<%= room._id %>" class="btn btn-primary">Reserve Now</a>
                                 </div>
                                 </div>
                             </div>
