commented code & bug fixes

--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -232,7 +232,7 @@
                                         Room</td>
                                     <td align="left" width="25%"
                                         style="padding: 6px 12px;font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                                        $<%= room.roomInformation.price %></td>
+                                        $<%= room.roomInformation.price %>/night</td>
                                 </tr>
                                 <tr>
                                     <td align="left" width="75%"
