--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -203,10 +203,9 @@
                         const params = new Proxy(new URLSearchParams(window.location.search), {
                             get: (searchParams, prop) => searchParams.get(prop),
                         });
-                        // Get the value of "some_key" in eg "https://example.com/?some_key=some_value"
+                        // Get the value of query parameter "room_id" 
                         let value = params.room_id; // "some_value"
                         $("#room").val(value)
-                        //$(`#room option[value='${value}']`).attr("selected", "selected");
                         });
                     function renderErrorMessage(message){
                         return ` <div class="col-12 alert alert-danger">
