--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,10 +82,10 @@
                     <i class="icon icon-chevron-down"></i>
                     <select name="adults" id="adults" class="form-control">
                       <option value="">Number of Adults</option>
+                      <option value="0">0</option>
                       <option value="1">1</option>
                       <option value="2">2</option>
                       <option value="3">3</option>
-                      <option value="4">4+</option>
                     </select>
                   </div>
                 </div>
@@ -97,16 +97,16 @@
                     <i class="icon icon-chevron-down"></i>
                     <select name="children" id="children" class="form-control">
                       <option value="">Number of Children</option>
+                      <option value="0">0</option>
                       <option value="1">1</option>
                       <option value="2">2</option>
                       <option value="3">3</option>
-                      <option value="4">4+</option>
                     </select>
                   </div>
               
                 </div>
               </div>
-                          <div class="col-md-3 form-group probootstrap-cta-button-wrap"><a href="#" class="btn btn-primary">Check Availability</a></div>
+            <div class="col-md-3 form-group probootstrap-cta-button-wrap"><a href="#" class="btn btn-primary">Check Availability</a></div>
 
             </div>
           </div>
