--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                       alt="Free HTML5 Bootstrap Template"></p>
                   <h1 class="probootstrap-heading probootstrap-animate">Welcome to Atlantis</h1>
                   <div class="probootstrap-animate probootstrap-sub-wrap">Far far away, behind the word mountains, far
-                    from the countries Vokalia and Consonantia, there live the blind texts.</div>
+                    from the countries Vokali and Consonantia, there live the blind texts.</div>
                 </div>
               </div>
             </div>
