--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
     <section class="probootstrap-slider flexslider">
       <ul class="slides">
-        <li style="background-image: url(images/slider_1.jpg);" class="overlay">
+        <li style="background-image: url(images/atlantis.webp);" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -29,13 +29,13 @@
                       alt="Free HTML5 Bootstrap Template"></p>
                   <h1 class="probootstrap-heading probootstrap-animate">Welcome to Atlantis</h1>
                   <div class="probootstrap-animate probootstrap-sub-wrap">Far far away, behind the word mountains, far
-                    from the countries Vokali and Consonantia, there live the blind texts.</div>
+                    from the countries Vokalia and Consonantia, there live the blind texts.</div>
                 </div>
               </div>
             </div>
           </div>
         </li>
-        <li style="background-image: url(images/slider_2.jpg);" class="overlay">
+        <li style="background-image: url(images/diner.jpg);" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -189,8 +189,8 @@
           <div class="col-md-6">
             <div class="probootstrap-block-image-text">
               <figure>
-                <a href="images/img_1.jpg" class="image-popup">
-                  <img src="images/img_1.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com"
+                <a href="images/granddeluxe.jpg" class="image-popup">
+                  <img src="images/granddeluxe.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com"
                     class="img-responsive">
                 </a>
                 <div class="actions">
@@ -215,8 +215,8 @@
           <div class="col-md-6">
             <div class="probootstrap-block-image-text">
               <figure>
-                <a href="images/img_2.jpg" class="image-popup">
-                  <img src="images/img_2.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com"
+                <a href="images/ultrasuperior.jpg" class="image-popup">
+                  <img src="images/ultrasuperior.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com"
                     class="img-responsive">
                 </a>
                 <div class="actions">
@@ -257,7 +257,7 @@
             <div class="owl-carousel owl-carousel-carousel">
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_1.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/classic.webp" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Classic Room</h3>
                     <p>Starting from <strong>$29.00/Night</strong></p>
@@ -272,7 +272,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_2.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/granddeluxe.jpg" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Grand Deluxe Room</h3>
                     <p>Starting from <strong>$32.00/Night</strong></p>
@@ -287,7 +287,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_3.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/ultrasuperior.jpg" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Ultra Superior Room</h3>
                     <p>Starting from <strong>$42.00/Night</strong></p>
@@ -302,7 +302,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_4.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/classic.webp" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Classic Room</h3>
                     <p>Starting from <strong>$29.00/Night</strong></p>
@@ -317,7 +317,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_5.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/granddeluxe.jpg" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Grand Deluxe Room</h3>
                     <p>Starting from <strong>$32.00/Night</strong></p>
@@ -332,7 +332,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_6.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/ultrasuperior.jpg" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Ultra Superior Room</h3>
                     <p>Starting from <strong>$42.00/Night</strong></p>
@@ -347,7 +347,7 @@
               </div>
               <div class="item">
                 <div class="probootstrap-room">
-                  <a href="#"><img src="images/img_7.jpg" alt=" " class="img-responsive"></a>
+                  <a href="#"><img src="images/ultrasuperior.jpg" alt=" " class="img-responsive"></a>
                   <div class="text">
                     <h3>Ultra Superior Room</h3>
                     <p>Starting from <strong>$42.00/Night</strong></p>
@@ -367,7 +367,7 @@
     </section>
 
     <section class="probootstrap-half">
-      <div class="image" style="background-image: url(images/slider_2.jpg);"></div>
+      <div class="image" style="background-image: url(images/courtyard.jpg);"></div>
       <div class="text">
         <div class="probootstrap-animate fadeInUp probootstrap-animated">
           <h2 class="mt0">Best 5 Star hotel</h2>
