--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -17,7 +17,7 @@
 
         <section class="probootstrap-slider flexslider probootstrap-inner">
             <ul class="slides">
-                <li style="background-image: url(images/slider_1.jpg);" class="overlay">
+                <li style="background-image: url(images/bestrooms.webp);" class="overlay">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
@@ -279,7 +279,7 @@
         </section>
 
         <section class="probootstrap-half">
-            <div class="image" style="background-image: url(images/slider_2.jpg);"></div>
+            <div class="image" style="background-image: url(images/courtyard.jpg);"></div>
             <div class="text">
                 <div class="probootstrap-animate fadeInUp probootstrap-animated">
                     <h2 class="mt0">Best 5 Star hotel</h2>
